--- a/Demo.WinUI/Demo.XamlIslands.UwpApp/App.xaml
+++ b/Demo.WinUI/Demo.XamlIslands.UwpApp/App.xaml
@@ -1,5 +1,5 @@
 ﻿<xaml:XamlApplication
-    x:Class="Testing.UwpApp.App"
+    x:Class="Demo.XamlIslands.UwpApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:xaml="using:Microsoft.Toolkit.Win32.UI.XamlHost">
