--- a/Demo.WinUI/Demo.XamlIslands.WpfWithXamlIslands/App.xaml
+++ b/Demo.WinUI/Demo.XamlIslands.WpfWithXamlIslands/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Testing.WpfWithXamlIslands.App"
+﻿<Application x:Class="Demo.XamlIslands.WpfWithXamlIslands.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Testing.WpfWithXamlIslands"
+             xmlns:local="clr-namespace:Demo.XamlIslands.WpfWithXamlIslands"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
