--- a/Demo.WinUI/Demo.XamlIslands.WpfWithXamlIslands/Controls/_Custom/OwnCustomSimpleUserControl.xaml
+++ b/Demo.WinUI/Demo.XamlIslands.WpfWithXamlIslands/Controls/_Custom/OwnCustomSimpleUserControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Testing.WpfWithXamlIslands.Controls.OwnCustomSimpleUserControl"
+﻿<UserControl x:Class="Demo.XamlIslands.WpfWithXamlIslands.Controls.OwnCustomSimpleUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Testing.WpfWithXamlIslands.Controls"
+             xmlns:local="clr-namespace:Demo.XamlIslands.WpfWithXamlIslands.Controls"
              xmlns:xamlIslands="clr-namespace:Microsoft.Toolkit.Wpf.UI.XamlHost;assembly=Microsoft.Toolkit.Wpf.UI.XamlHost"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
