--- a/Demo.WinUI/Demo.XamlIslands.WpfWithXamlIslands/MainWindow.xaml
+++ b/Demo.WinUI/Demo.XamlIslands.WpfWithXamlIslands/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Testing.WpfWithXamlIslands.MainWindow"
+﻿<Window x:Class="Demo.XamlIslands.WpfWithXamlIslands.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Testing.WpfWithXamlIslands"
-        xmlns:localControls="clr-namespace:Testing.WpfWithXamlIslands.Controls"
+        xmlns:local="clr-namespace:Demo.XamlIslands.WpfWithXamlIslands"
+        xmlns:localControls="clr-namespace:Demo.XamlIslands.WpfWithXamlIslands.Controls"
         mc:Ignorable="d"
         Title="Xaml Islands with WPF" Height="450" Width="800">
     <Window.DataContext>
